[tool.poetry]
name = "netlookup"
version = "1.3.0"
description = "Python tools to look up information about networks"
authors = ["Ilkka Tuohela <hile@iki.fi>"]
license = "PSF"

[tool.poetry.dependencies]
python = "^3.9"
cli_toolkit = "^2.2"
dnspython = "^2.1"
netaddr = "^0.8"
requests = "^2.26"
requests-mock = "^1.10.0"

[tool.poetry.dev-dependencies]
coverage = "^6.1"
flake8 = "^5.0"
flake8-bugbear = "^22"
flake8-quotes = "^3.3"
pycodestyle = "^2.8"
pyflakes = "^2.4"
pylint = "^2"
pytest = "^7.1"
tox = "^3"

[tool.poetry.scripts]
netlookup = "netlookup.bin.netlookup:main"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"
