[metadata]
description-file = README.md

[tox]
envlist = py36

[testenv]
deps =
    -e ../systematic-cli
    dnspython
    netaddr
    requests
    coverage
    pytest
    pytest-datafiles
commands =
    coverage run --source systematic_networks --module py.test
    coverage html --directory coverage

[tool:pytest]
addopts = --verbose

[flake8]
max-line-length = 120
exclude =
    .git,
    .eggs,
    .tox,
    __pycache__,
    docs/source/conf.py,
    build,
    dist
