[metadata]
description-file = README.md

[tox]
envlist = py36

[testenv]
deps =
    git+https://git.tuohela.net/systematic-components/systematic-cli.git@1.0.0
    -r requirements/test.txt
commands =
    unittest: coverage run --source systematic_networks --module py.test
    unittest: coverage html
    unittest: coverage report

    lint: flake8
    lint: pycodestyle setup.py tests systematic_networks
    lint: pylint setup.py tests systematic_networks

[pycodestyle]
max-line-length = 120
statistics = True

[tool:pytest]
addopts = --verbose

[flake8]
max-line-length = 120
exclude =
    .git,
    .eggs,
    .tox,
    __pycache__,
    docs/source/conf.py,
    build,
    dist
